# rust-procmacro-quickstart-template

./: .genignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  main.rs
